# TCC-HealthManager

./: README.md
src/embedded/: FULL.ino
src/mobile/: CMakeLists.txt  Main.qml  main.cpp
src/mobile/android/: AndroidManifest.xml
